changed color scheme and added polygon to components

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node-sass": "^4.9.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,5 +16,11 @@
     "eject": "react-scripts eject",
     "watch": "node-sass sass/main.scss src/App.css -w",
     "compile:sass": "node-sass sass/main.scss src/App.css"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
